update text + logos

--- a/fr/index.html
+++ b/fr/index.html
@@ -220,9 +220,8 @@
                       <span class="bold"
                         >créer l’une des meilleures crèmes de soin anti-âge 
                         Bio et Vegan du marché</span
-                      >. Prévue pour un lancement au cours du 2ème semestre 2022,
-                      cette <span class="bold">crème nouvelle génération</span> sera vendue
-                      exclusivement en <span class="bold">E-Commerce</span>.
+                      >. Prévue pour un <span class="bold">lancement au cours du 2ème semestre 2023</span>,
+                      cette crème nouvelle génération sera <span class="bold">vendue exclusivement en E-Commerce</span>.
                     </p>
                       <p class="">
                       <span class="bold">Conçue et fabriquée en France à Lyon</span> dans des laboratoires
@@ -272,20 +271,16 @@
                       La marque déposée « Les Laboratoires de L’Antiquaille »
                       et le nom de domaine « lantiquaille.com » sont un
                       <span class="bold">hommage à l’ancien hôpital de L’Antiquaille à Lyon</span>
-                      qui, durant des décennies, a symbolisé l’excellence de
-                      la recherche lyonnaise en matière de
-                      <span class="bold">dermatologie</span>.
+                      qui, durant des décennies, <span class="bold">a symbolisé l’excellence de
+                      la recherche lyonnaise en matière de dermatologie</span>.
                     </p>
                       <p class="">
-                        Aujourd’hui encore,
-                      <span class="bold">Lyon est une place de référence</span> dans ce domaine
+                      Aujourd’hui encore, Lyon est une place de référence dans ce domaine
                       avec des laboratoires et des organismes scientifiques de
                       renommée internationale. L’ambition du projet est de
-                      mobiliser et de
-                      <span class="bold">s’appuyer sur ce savoir-faire unique</span> pour créer
-                      un
-                      <span class="bold">produit d’excellence alliant le meilleur de la
-                        science et le meilleur de la nature</span>.
+                      mobiliser et de s’appuyer sur ce savoir-faire unique pour 
+                      <span class="bold">créer un produit d’excellence alliant le meilleur de la
+                      science et le meilleur de la nature</span>.
                     </p>
                   </article>
                 </div>
@@ -427,7 +422,8 @@
               <p class="produit-article-text" data-aos="fade-up" data-aos-offset="100"
               data-aos-delay="250"
               data-aos-duration="1000">
-                Ce produit d’exception sera commercialisé exclusivement en ligne au cours du 2ème semestre 2022 sous la marque « Les Laboratoires de <nobr>l’Antiquaille ».</nobr> <br /> Ce mode de distribution permettra de réduire le nombre d’intermédiaires et de pouvoir le proposer à son juste prix.
+                Ce produit d’exception sera commercialisé exclusivement en ligne au cours du 2ème semestre 2023 sous la marque « Les Laboratoires de <nobr>L’Antiquaille ».</nobr> 
+                <br /> Ce mode de distribution permettra à la marque d’avoir un lien direct avec ses consommateurs tout en leur faisant vivre une expérience d’achat unique.
               </p>
             </div>
           </div>
@@ -474,10 +470,9 @@
                     </p>
                       <p class="">
                         C’est l’une des raisons pour lesquelles
-                      <span class="bold">ce site</span> a été conçu. Car, au-delà d’être un outil
-                      de communication sur le projet, il
-                      <span class="bold">a pour fonction</span> de vous permettre de nous donner votre avis, 
-                      de tester de futurs échantillons produits et ainsi de <span class="bold">participer directement au
+                      <span class="bold">ce site a été conçu</span>. Car, au-delà d’être un outil
+                      de communication sur le projet, il a pour fonction de <span class="bold">vous permettre</span> de nous donner votre avis, 
+                      de tester de futurs échantillons produits et ainsi <span class="bold">de participer directement au
                         développement du projet</span
                       >.
                     </p>
@@ -558,14 +553,18 @@
           data-aos-duration="1000">
             <h1 class="timing-title">Le timing</h1>
             <p class="timing-text">
-              Le projet « Les Laboratoires de L’Antiquaille » a été sélectionné pour participer au Programme Lyon Start-Up qui s’est déroulé tout au long du 4ème trimestre 2020. 
-              Ce programme d’accompagnement est organisé par La Fondation pour L’Université de Lyon et rassemble les principaux acteurs de l’entrepreneuriat sur Lyon et sa région. 
-              Aujourd’hui le projet est accompagné par Grow Up, société de conseil en stratégie et financement de l’innovation pour les start-up.
+              Après avoir suivi le <span class="bold">programme d’incubation « Lyon Start-Up »</span> fin 2020, <span class="bold">l’entreprise « Les Laboratoires de L’Antiquaille » a été créée en octobre 2021</span> par un groupe d’actionnaires privés. 
+              Aujourd’hui, <span class="bold">l’entreprise vient de lancer son programme de recherche et développement</span> en vue de mettre au point la formule de son futur soin anti-âge d’exception.
+              Elle a bénéficié début 2022 du <span class="bold">soutien de la BPI France avec l’obtention d’une « Bourse French Tech »</span> destinée à cofinancer une partie de son programme d’innovation. 
+              Elle est <span class="bold">actuellement accompagnée par « Grow Up »</span>, société de conseil en stratégie et financement de l’innovation pour les start-up.
             </p>
             <p class="timing-text">
-              L’objectif du projet est de démarrer les travaux de développement de cette future crème anti-âge d'exception au cours du premier semestre 2021 pour un objectif de
-              <span class="bold">lancement au cours du 2ème semestre 2022</span>.
+              L’entreprise et son fondateur participent aux différentes activités des <span class="bold">associations professionnelles du secteur de la dermatologie et de la dermo-cosmétique</span> tant sur la région lyonnaise 
+              (ex. <span class="bold">Cosmet’In Lyon</span>) que sur un plan national (ex. <span class="bold">SFC / Société Française de Cosmétologie</span>).
             </p>  
+            <p class="timing-text">
+              Le lancement des produits des « Laboratoires de L’Antiquaille » est prévu pour le <span class="bold">2ème semestre 2023</span>.
+            </p>
           </article>
         </div>
 
@@ -588,7 +587,7 @@
         <div class="container partenaires-container">
           <h2 class="partenaires-title">Ils nous accompagnent</h2>
           <div class="split">
-            <a hreflang="fr" href="https://www.fpul-lyon.org/" target="_blank" rel="noopener noreferrer" class="featured__item" >
+            <!-- <a hreflang="fr" href="https://www.fpul-lyon.org/" target="_blank" rel="noopener noreferrer" class="featured__item" >
               <img
                 src="../assets/images/partenaires/fondation université Lyon.png"
                 alt="Fondation Université Lyon"
@@ -597,7 +596,7 @@
               data-aos-delay=""
               data-aos-duration="1000"
               />
-            </a>
+            </a> -->
             
             <a hreflang="fr" href="https://www.lyonstartup.com/" target="_blank" rel="noopener noreferrer" class="featured__item">
               <img
@@ -622,6 +621,26 @@
             <a hreflang="fr" href="https://growup.tech/" target="_blank" rel="noopener noreferrer" class="featured__item">
               <img
                 src="../assets/images/partenaires/GROW_UP_Bleu_Blanc.png"
+                alt="Grow Up"
+                class="featured__img"
+                data-aos="fade-up"
+              data-aos-delay="200"
+              data-aos-duration="1000"
+              />
+            </a>
+            <a hreflang="fr" href="https://www.bpifrance.fr/" target="_blank" rel="noopener noreferrer" class="featured__item">
+              <img
+                src="../assets/images/partenaires/bpi-france.png"
+                alt="BPI France"
+                class="featured__img"
+                data-aos="fade-up"
+              data-aos-delay="200"
+              data-aos-duration="1000"
+              />
+            </a>
+            <a hreflang="fr" href="https://lafrenchtech.com/" target="_blank" rel="noopener noreferrer" class="featured__item">
+              <img
+                src="../assets/images/partenaires/french-tech.png"
                 alt="Grow Up"
                 class="featured__img"
                 data-aos="fade-up"
