--- a/fr/mentions-legales.html
+++ b/fr/mentions-legales.html
@@ -50,19 +50,26 @@
           <div class="presentation-site">
             <p>
               <span class="bold">Objet :</span><br>
-              Le site <a href="./index.html">www.lantiquaille.com</a> est un site de promotion et d’information sur le projet entrepreneurial « Les Laboratoires de L’Antiquaille » porté par Florent Gerphagnon.
+              Le site <a href="./index.html">www.lantiquaille.com</a> est un site de promotion et d’information sur le projet d'entreprise « Les Laboratoires de L’Antiquaille ».
             </p>
 
             <p>
-              <span class="bold">Propriétaire et directeur de la Publication :</span> Florent Gerphagnon<br>
-              Adresse : 6, rue Julien Duvivier, 69003 Lyon, France<br>
+              <span class="bold">Propriétaire :</span> Les Laboratoires de L’Antiquaille SAS<br>
+              <span class="bold">Directeur de la Publication :</span> Florent Gerphagnon<br>
+              Adresse : 302, rue Garibaldi, 69007 Lyon, France<br>
+              Immatriculation : RCS Lyon 904 675 022<br>
+              TVA : FR95904675022<br>
               Email : <a href="mailto:fgerphagnon@lantiquaille.com" class="">fgerphagnon@lantiquaille.com</a>
             </p>
 
             <p>
-              <span class="bold">Hébergement :</span> Netlify<br>
+              <span class="bold">Hébergement :</span> OVH (Siège social : 2 rue Kellermann, 59100 Roubaix, France) via Netlify (Serveur situé à Francfort-sur-le-Main, Allemagne)<br>
+              OVH : <a href="https://www.ovhcloud.com/" target="_blank" rel="noopener noreferrer">www.ovhcloud.com</a><br>
+              Netlify : <a href="https://www.netlify.com" target="_blank" rel="noopener noreferrer">www.netlify.com</a>
+
+              <!-- <span class="bold">Hébergement :</span> Netlify<br>
               Adresse : 2325 3rd Street, Suite 296, San Francisco, CA 94107, USA<br>
-              Tel : +1 415-691-1573 / <a href="https://www.netlify.com" target="_blank" rel="noopener noreferrer">www.netlify.com</a>
+              Tel : +1 415-691-1573 / <a href="https://www.netlify.com" target="_blank" rel="noopener noreferrer">www.netlify.com</a> -->
             </p>
 
             <p>
@@ -76,7 +83,7 @@
 
           <div class="droit-propriete-intellectuelle">
             <p>
-              Le site <a href="./index.html">www.lantiquaille.com</a> doit être considéré comme un tout indissociable. A noter que l’appellation « Les Laboratoires de L’Antiquaille » est une marque déposée et propriété exclusive du directeur et propriétaire du site, Florent Gerphagnon. Les informations figurant sur ce site sont réservées à un usage exclusivement personnel et ne peuvent être en tout ou partie ni reproduites, ni communiquées. L'ensemble des éléments constituant le présent site (textes, messages, images, photos, graphismes, logos, marques, sons, vidéo, logiciels, plans, noms, créations et œuvres protégeables diverses, bases de données...) ainsi que le site lui-même, relèvent des législations françaises et internationales sur le droit d'auteur et la propriété intellectuelle. Ces éléments sont la propriété exclusive du propriétaire du site <a href="./index.html">www.lantiquaille.com</a>, hormis les éléments réalisés par des intervenants extérieurs n'ayant pas cédé leurs droits d'auteur. Toute reproduction, représentation ou diffusion, à des fins autres que personnelles, de tout ou partie du contenu de ce site sur quel que support ou par tout procédé que ce soit est interdite. Le non-respect de cette interdiction constitue une contrefaçon susceptible d'engager la responsabilité civile et pénale du contrefacteur.
+              Le site <a href="./index.html">www.lantiquaille.com</a> doit être considéré comme un tout indissociable. A noter que l’appellation « Les Laboratoires de L’Antiquaille » est une marque déposée et propriété exclusive de l'entreprise propriétaire du site, Florent Gerphagnon. Les informations figurant sur ce site sont réservées à un usage exclusivement personnel et ne peuvent être en tout ou partie ni reproduites, ni communiquées. L'ensemble des éléments constituant le présent site (textes, messages, images, photos, graphismes, logos, marques, sons, vidéo, logiciels, plans, noms, créations et œuvres protégeables diverses, bases de données...) ainsi que le site lui-même, relèvent des législations françaises et internationales sur le droit d'auteur et la propriété intellectuelle. Ces éléments sont la propriété exclusive du propriétaire du site <a href="./index.html">www.lantiquaille.com</a>, hormis les éléments réalisés par des intervenants extérieurs n'ayant pas cédé leurs droits d'auteur. Toute reproduction, représentation ou diffusion, à des fins autres que personnelles, de tout ou partie du contenu de ce site sur quel que support ou par tout procédé que ce soit est interdite. Le non-respect de cette interdiction constitue une contrefaçon susceptible d'engager la responsabilité civile et pénale du contrefacteur.
             </p>
           </div>
 
@@ -88,7 +95,7 @@
           <div class="limitation-responsabilite">
             <h2>Limitation de responsabilité</h2>
             <p>
-              Le directeur et propriétaire du site <a href="./index.html">www.lantiquaille.com</a> se réserve le droit de mettre à jour, de modifier ou de corriger son contenu à tout moment sans préavis. La direction du site <a href="./index.html">www.lantiquaille.com</a> ne donne aucune garantie explicite ou implicite et n’assume aucune responsabilité relative à l’utilisation des informations et des éléments du site. L’utilisateur est seul responsable de l’utilisation des éléments et informations.
+              La direction du site <a href="./index.html">www.lantiquaille.com</a> se réserve le droit de mettre à jour, de modifier ou de corriger son contenu à tout moment sans préavis. Elle ne donne aucune garantie explicite ou implicite et n’assume aucune responsabilité relative à l’utilisation des informations et des éléments du site. L’utilisateur est seul responsable de l’utilisation des éléments et informations.
             </p>
             <p>
               En aucun cas, le directeur du site <a href="./index.html">www.lantiquaille.com</a> et les tiers mentionnés sur ce dernier ne pourront être tenus responsables, au titre d’une action en responsabilité contractuelle, délictuelle, ou de toute autre action, de tous dommages directs ou indirects, de quelque nature que ce soit, ou de tous préjudices, notamment de nature financier ou commercial résultant de l’utilisation du site ou d’une quelconque information obtenue par le site <a href="./index.html">www.lantiquaille.com</a>.
@@ -97,7 +104,7 @@
               La direction du site ne garantit pas que le logiciel utilisé sur le site, les informations, les applications en ligne, ni les autres services fournis par l’intermédiaire du site ne comportent pas d’erreur et que leur exploitation se fasse sans interruption.
             </p>
             <p>
-              Le directeur et propriétaire du site <a href="./index.html">www.lantiquaille.com</a> ne pourra être tenu pour responsable en cas de contamination des matériels informatiques des internautes résultant de la propagation d’un virus ou autres infections informatiques. Il appartient à l’utilisateur de ce site de prendre toutes les mesures appropriées de façon à protéger ses propres données et/ou logiciels de la contamination par des éventuels virus.
+              De la même façon, elle ne pourra être tenu pour responsable en cas de contamination des matériels informatiques des internautes résultant de la propagation d’un virus ou autres infections informatiques. Il appartient à l’utilisateur de ce site de prendre toutes les mesures appropriées de façon à protéger ses propres données et/ou logiciels de la contamination par des éventuels virus.
             </p>
           </div>
 
@@ -121,11 +128,11 @@
 
           <div class="politique-protection-donnees">
             <h2 class= "politique-protection-donnees-titre">Politique de protection des données personnelles</h2>
-            <div class="note-maj">Dernière mise à jour : 25/10/2020.</div>
+            <div class="note-maj">Dernière mise à jour : 12/05/2022.</div>
             <p>La présente politique de protection des données personnelles définit et vous informe de la manière dont le site <a href="./index.html">www.lantiquaille.com</a> utilise et protège les informations que vous nous transmettez, lors de votre navigation sur le site.
             </p>
             <p>
-              Le directeur et propriétaire du site <a href="./index.html">www.lantiquaille.com</a> s’engage à ce que la collecte et le traitement des données personnelles soient conformes au Règlement général sur la protection des données (RGPD).
+             La direction du site <a href="./index.html">www.lantiquaille.com</a> s’engage à ce que la collecte et le traitement des données personnelles soient conformes au Règlement général sur la protection des données (RGPD).
             </p>
             <p>
               Cette politique de protection des données personnelles est susceptible d’être revue à tout moment, notamment en vue de se conformer à toutes évolutions législatives et réglementaires. La date de sa mise à jour est identifiée en tête de la présente politique.
@@ -140,7 +147,7 @@
               A ce jour, cette collecte de données peut s’effectuer à deux endroits du site :
               <ol>
                 <li>Soit en haut de la page principale dans le cadre de la participation de l’internaute au questionnaire sur l’étude de marché proposée par le site</li>
-                <li>Soit en bas de page de la page principale dans le cas où l’internaute souhaiterait rester informé sur l’évolution du projet entrepreneurial « Les Laboratoires de L’Antiquaille » présenté sur le site.</li>
+                <li>Soit en bas de page de la page principale dans le cas où l’internaute souhaiterait rester informé sur l’évolution du projet d'entreprise « Les Laboratoires de L’Antiquaille » présenté sur le site.</li>
               </ol>
               <p>
               Le site étant susceptible d’évolution, ces modes de collecte sont de fait susceptibles de modifications.
@@ -153,14 +160,13 @@
               <span class="bold">Responsable du traitement des données
               </span>
               <br>
-              Toutes les données sont collectées et traitées par le directeur et propriétaire du site, Florent Gerphagnon.
+              Toutes les données sont collectées et traitées par le propriétaire du site via son directeur de la publication.
             </p>
 
             <br>
             <p>
               <span class="bold">Destinataires des données</span>
-              <br>
-              
+              <br>              
               Les données personnelles des internautes collectées avec leur accord sur le site sont traitées en interne, directement ou par le biais de prestataires externes agissant en qualité de sous-traitant.
               <br>
               Ces prestataires externes agissent en qualité de sous-traitant aux fins de réaliser les missions qui leur sont confiées par la direction du site <a href="./index.html">www.lantiquaille.com</a>. Ils s’engagent contractuellement à apporter le plus grand respect à la sécurité et à la confidentialité des données personnelles qu’ils sont amenés à traiter dans ce cadre.
@@ -172,11 +178,11 @@
               <br>
               Les informations recueillies au travers du site <a href="./index.html">www.lantiquaille.com</a> ne sont utilisées et ne font l’objet de communication extérieure que pour les seules finalités liées à l’objet du site ou pour satisfaire aux obligations légales et réglementaires.
               <br>
-              Les traitements de données à caractère personnel mis en œuvre ont en effet pour unique but de servir l’objet et la mission du site <a href="./index.html">www.lantiquaille.com</a>, à savoir la promotion et le développement du projet entrepreneurial « Les Laboratoires de L’Antiquaille » porté par Florent Gerphagnon.
+              Les traitements de données à caractère personnel mis en œuvre ont en effet pour unique but de servir l’objet et la mission du site <a href="./index.html">www.lantiquaille.com</a>, à savoir la promotion et le développement du projet d'entreprise « Les Laboratoires de L’Antiquaille ».
               <br>
               Il peut s’agir par exemple de traiter les réponses à l’étude de marché présentée sur le site, d’offrir aux internautes qui le souhaitent des informations régulières sur l’évolution du projet « Les Laboratoires de L’Antiquaille », d’améliorer l’expérience utilisateur des visiteurs du site, ou plus généralement de maintenir un lien entre les internautes intéressés par le projet et son porteur.
               <br>
-              En aucun cas les données collectées ne le sont à des fins commerciales externes. Le directeur et propriétaire du site <a href="./index.html">www.lantiquaille.com</a>, Florent Gerphagnon, s’engage à ne jamais commercialiser les données collectées par le site auprès de tiers.
+              En aucun cas les données collectées ne le sont à des fins commerciales externes. La direction du site <a href="./index.html">www.lantiquaille.com</a> s’engage à ne jamais commercialiser les données collectées par le site auprès de tiers.
             </p>
 
             <br>
