--- a/en/index.html
+++ b/en/index.html
@@ -195,7 +195,7 @@
                       The project aims 
                       <span class="bold"
                         >to create one of the best Organic and Vegan anti-ageing creams on the market</span
-                      >. Scheduled for <span class="bold">launch during the second semester of 2022</span>, this new generation cream will be <span class="bold">sold exclusively online</span>.
+                      >. Scheduled for <span class="bold">launch during the second semester of 2023</span>, this new generation cream will be <span class="bold">sold exclusively online</span>.
                     </p>
                       <p class="">
                       <span class="bold">Designed and manufactured in Lyon</span> in renowned laboratories, it will represent a perfectly balanced union of advanced research in <span class="bold">dermatology</span>, 
@@ -246,8 +246,8 @@
                       <span class="bold">the symbol of Lyon excellence in dermatology</span>.
                     </p>
                       <p class="">
-                      Nowadays, Lyon is a major continues to be a centre of excellence in this field and hosts many internationally renowned laboratories and scientific organisations. 
-                      The project's ambition is to harness and build on this unique know-how <span class="bold">to create an outstanding product which combines the best of science and nature</span>.
+                      Nowadays, Lyon continues to be a centre of excellence in this field and hosts many internationally renowned laboratories and scientific organisations. 
+                      The project's ambition is to harness and build on this unique know-how <span class="bold">to create an outstanding product which combines the best of Science and Nature</span>.
                     </p>
                   </article>
                 </div>
@@ -378,8 +378,8 @@
               <p class="produit-article-text" data-aos="fade-up" data-aos-offset="100"
               data-aos-delay="250"
               data-aos-duration="1000">
-              This unique product will be sold exclusively online during the second semester of 2022 under the brand name "Les Laboratoires de <nobr>l'Antiquaille".</nobr>
-              <br />This distribution model will make it possible to reduce the number of intermediaries and enable us to offer it at a fair price.
+              This unique product will be sold exclusively online during the second semester of 2023 under the brand name "Les Laboratoires de <nobr>L'Antiquaille".</nobr>
+              <br />This distribution model will allow the brand to have a direct link with its consumers while providing them with a unique shopping experience.
               </p>
             </div>
           </div>
@@ -421,8 +421,8 @@
                       in the design and development of the brand's future products.
                     </p>
                       <p class="">
-                        This is one of the reasons why <span class="bold">this website</span> was launched. Beyond communicating on the project, 
-                      <span class="bold">it will give you the opportunity to express your opinion and provide direct input, to test future product samples</span> and thus participate directly in the development of the project.
+                        This is one of the reasons why <span class="bold">this website was launched</span>. Beyond communicating on the project, 
+                      it will <span class="bold">give you the opportunity to</span> express your opinion and provide direct input, to test future product samples and thus <span class="bold">participate directly in the development of the project</span>.
                     </p>
                   </article>
                 </div>
@@ -498,12 +498,16 @@
           data-aos-duration="1000">
             <h1 class="timing-title">The timing</h1>
             <p class="timing-text">
-              The "Les Laboratoires de L'Antiquaille" project was selected to join the Lyon Start-Up Programme, which took place throughout the 4th quarter of 2020. 
-              This mentoring programme is run by the Foundation for the University of Lyon and involves the key figures in entrepreneurship in Lyon and its region. 
-              Today the project is coached by Grow Up, a consulting firm specialized in strategy and innovation financing for start-ups.
+              After completing the <span class="bold">"Lyon Start-Up" incubation programme</span> at the end of 2020, <span class="bold">"Les Laboratoires de L'Antiquaille" company was created in October 2021</span> by a group of private shareholders. 
+              Today, <span class="bold">the company has just launched its research and development programme</span> with the aim of developing the formula of its unique future anti-ageing skincare.
+              In early 2022, the company benefited from the <span class="bold">support of BPI France with the award of a "Bourse French Tech" grant</span> destined to co-finance part of its innovation programme. 
+              It is <span class="bold">now supported by "Grow Up"</span>, a consultancy firm specialising in strategy and innovation financing for start-ups.              
             </p>
             <p class="timing-text">
-              The plan is to begin the development work on this future outstanding anti-ageing cream during the first semester of 2021 to target a <span class="bold">launch during the second semester of 2022</span>.
+              The company and its founder participate in the various activities of <span class="bold">professional associations in the dermatology and dermo-cosmetics sector</span> both in the Lyon area (e.g. <span class="bold">Cosmet'In Lyon</span>) and on a national level (e.g. <span class="bold">SFC / The French Society of Cosmetology</span>).
+            </p>
+            <p class="timing-text">
+              The "Laboratoires de L'Antiquaille" products are scheduled to be launched during the <span class="bold">second half of 2023</span>.
             </p>
           </article>
         </div>
@@ -526,7 +530,7 @@
         <div class="container partenaires-container">
           <h2 class="partenaires-title">They support us</h2>
           <div class="split">
-            <a hreflang="fr" href="https://www.fpul-lyon.org/" target="_blank" rel="noopener noreferrer" class="featured__item" >
+            <!-- <a hreflang="fr" href="https://www.fpul-lyon.org/" target="_blank" rel="noopener noreferrer" class="featured__item" >
               <img
                 src="../assets/images/partenaires/fondation université Lyon.png"
                 alt="Fondation Université Lyon"
@@ -535,7 +539,7 @@
               data-aos-delay=""
               data-aos-duration="1000"
               />
-            </a>
+            </a> -->
             
             <a hreflang="fr" href="https://www.lyonstartup.com/" target="_blank" rel="noopener noreferrer" class="featured__item">
               <img
@@ -560,6 +564,26 @@
             <a hreflang="fr" href="https://growup.tech/" target="_blank" rel="noopener noreferrer" class="featured__item">
               <img
                 src="../assets/images/partenaires/GROW_UP_Bleu_Blanc.png"
+                alt="Grow Up"
+                class="featured__img"
+                data-aos="fade-up"
+              data-aos-delay="200"
+              data-aos-duration="1000"
+              />
+            </a>            
+            <a hreflang="en" href="https://www.bpifrance.com/" target="_blank" rel="noopener noreferrer" class="featured__item">
+              <img
+                src="../assets/images/partenaires/bpi-france.png"
+                alt="BPI France"
+                class="featured__img"
+                data-aos="fade-up"
+              data-aos-delay="200"
+              data-aos-duration="1000"
+              />
+            </a>
+            <a hreflang="en" href="https://lafrenchtech.com/en/" target="_blank" rel="noopener noreferrer" class="featured__item">
+              <img
+                src="../assets/images/partenaires/french-tech.png"
                 alt="Grow Up"
                 class="featured__img"
                 data-aos="fade-up"
