corrections suite update

--- a/en/legal-notice.html
+++ b/en/legal-notice.html
@@ -57,7 +57,7 @@
               <span class="bold">Owner:</span> Les Laboratoires de L’Antiquaille SAS<br>
               <span class="bold">Publishing Director:</span> Florent Gerphagnon<br>
               Address: 302, rue Garibaldi, 69007 Lyon, France<br>
-              302, rue Garibaldi, 69007 Lyon, France<br>
+              Registration: RCS Lyon 904 675 022<br>
               VAT: FR95904675022<br>
               Email: <a href="mailto:fgerphagnon@lantiquaille.com" class="">fgerphagnon@lantiquaille.com</a>
             </p>
@@ -130,11 +130,11 @@
 
           <div class="politique-protection-donnees">
             <h2 class= "politique-protection-donnees-titre">Personal Data Protection Policy</h2>
-            <div class="note-maj">Last update: 15/05/2022.</div>
+            <div class="note-maj">Last update: 25/05/2022.</div>
             <p>This personal data protection policy defines and informs you of the way in which the <a href="./index.html">www.lantiquaille.com</a> site uses and protects the information that you transmit to us when you browse the site.
             </p>
             <p>
-              The site management commits to ensure that the collection and processing of personal data complies with the General Data Protection Regulation (GDPR).
+              The site management commits to ensuring that the collection and processing of personal data complies with the General Data Protection Regulation (GDPR) in force in the European Union (EU).
             </p>
             <p>
               This personal data protection policy may be revised at any time, in particular with a view to complying with any legislative and regulatory changes. The date of its update is identified at the top of this policy.
@@ -162,7 +162,7 @@
               <span class="bold">Person responsible for data processing
               </span>
               <br>
-              All data is collected and processed by the owner of the site via its Publishing Director.
+              All data is collected and processed by the owner of the site via his Publishing Director.
             </p>
 
             <br>
@@ -184,7 +184,7 @@
               <br>
               This may involve, for example, processing the responses to the market study presented on the site, offering Internet users regular information on the progress of the "Les Laboratoires de L'Antiquaille" project, improving the user experience of visitors to the site, or more generally maintaining a link between Internet users interested in the project and its initiator. 
               <br>
-              Under no circumstances is the data collected for external commercial purposes. The owner of the <a href="./index.html">www.lantiquaille.com</a> website commits to never commercialize the data collected to any third parties.
+              Under no circumstances is the data collected for external commercial purposes. The owner of the <a href="./index.html">www.lantiquaille.com</a> website is committed to never commercialize the data collected to any third parties.
             </p>
 
             <br>
