--- a/fr/index.html
+++ b/fr/index.html
@@ -642,7 +642,7 @@
               <img
                 src="../assets/images/partenaires/french-tech.png"
                 alt="Grow Up"
-                class="featured__img"
+                class="featured__img french-tech"
                 data-aos="fade-up"
               data-aos-delay="200"
               data-aos-duration="1000"
