--- a/en/index.html
+++ b/en/index.html
@@ -422,7 +422,7 @@
                     </p>
                       <p class="">
                         This is one of the reasons why <span class="bold">this website was launched</span>. Beyond communicating on the project, 
-                      it will <span class="bold">give you the opportunity to</span> express your opinion and provide direct input, to test future product samples and thus <span class="bold">participate directly in the development of the project</span>.
+                      it will <span class="bold">give you the opportunity</span> to express your opinion and provide direct input, to test future product samples and thus <span class="bold">to participate directly in the development of the project</span>.
                     </p>
                   </article>
                 </div>
@@ -498,13 +498,13 @@
           data-aos-duration="1000">
             <h1 class="timing-title">The timing</h1>
             <p class="timing-text">
-              After completing the <span class="bold">"Lyon Start-Up" incubation programme</span> at the end of 2020, <span class="bold">"Les Laboratoires de L'Antiquaille" company was created in October 2021</span> by a group of private shareholders. 
-              Today, <span class="bold">the company has just launched its research and development programme</span> with the aim of developing the formula of its unique future anti-ageing skincare.
+              After completing the <span class="bold">"Lyon Start-Up" incubation programme</span> at the end of 2020, <span class="bold">"Les Laboratoires de L'Antiquaille" company was created in October 2021</span> by a group of private investors. 
+              Today, <span class="bold">the company has just launched its research and development programme</span> with the objective of developing the formula of its unique future anti-ageing skincare.
               In early 2022, the company benefited from the <span class="bold">support of BPI France with the award of a "Bourse French Tech" grant</span> destined to co-finance part of its innovation programme. 
               It is <span class="bold">now supported by "Grow Up"</span>, a consultancy firm specialising in strategy and innovation financing for start-ups.              
             </p>
             <p class="timing-text">
-              The company and its founder participate in the various activities of <span class="bold">professional associations in the dermatology and dermo-cosmetics sector</span> both in the Lyon area (e.g. <span class="bold">Cosmet'In Lyon</span>) and on a national level (e.g. <span class="bold">SFC / The French Society of Cosmetology</span>).
+              The company and its founder participate in the various activities of <span class="bold">professional associations in the dermatology and dermo-cosmetics sector</span> both in the Lyon area (e.g. <span class="bold">Cosmet'In Lyon</span>) and on a national scale (e.g. <span class="bold">SFC / The French Society of Cosmetology</span>).
             </p>
             <p class="timing-text">
               The "Laboratoires de L'Antiquaille" products are scheduled to be launched during the <span class="bold">second half of 2023</span>.
@@ -585,7 +585,7 @@
               <img
                 src="../assets/images/partenaires/french-tech.png"
                 alt="Grow Up"
-                class="featured__img"
+                class="featured__img french-tech"
                 data-aos="fade-up"
               data-aos-delay="200"
               data-aos-duration="1000"
